[project]
name = "aibt-108"
version = "0.1.0"
description = "Course conten"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discrete-optimization>=0.8.0",
    "folium>=0.20.0",
    "gymnasium>=1.2.3",
    "marimo[recommended]>=0.23.0",
    "nevergrad>=1.0.12",
    "pddlgym>=0.0.7",
    "pyperplan>=2.1",
    "ray>=2.54.1",
    "scikit-decide>=1.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
]
