[project]
name = "aibt-108"
version = "0.1.0"
description = "Course conten"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discrete-optimization>=0.8.0",
    "folium>=0.20.0",
    "ipykernel>=7.2.0",
    "marimo[recommended]>=0.23.0",
    "nevergrad>=1.0.12",
    "openap==1.5",
    "pddlgym>=0.0.7",
    "pyperplan>=2.1",
    "pytz>=2026.1.post1",
    "ray>=2.37.0",
    "scikit-decide[all]>=1.0.3",
]